Fix email-orders form buttons spacing on extra small screens

--- a/sass/blocks/_stock-form.sass
+++ b/sass/blocks/_stock-form.sass
@@ -406,6 +406,10 @@ $block: ".stock-form"
       #{$block}__actions_adjust_t-form &
         margin-left: 20px
 
+      @media screen and (max-width: 400px)
+        #{$block}__actions_adjust_em-form &
+          margin-left: 10px
+
     // $Common form action MOD: state hidden
     &_state_hidden
       display: none
